--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^2.0.7
   google_fonts: ^5.1.0
   font_awesome_flutter: ^9.2.0
+  flutter_zoom_drawer: ^3.1.1
 
 
 dev_dependencies:
